compiler/w_session/tests/errors/out-of-scope.stderr
tests/errors/out-of-scope.w:6:1: error: identifier does not exist
}
^
tests/errors/out-of-scope.w:6:1: error: type mismatch
}
^
